<resources>
    <string name="app_name">MyAppX</string>
    <string name="app_version">1.0.0</string>
    <string name="login_user">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_keep_password">记住密码</string>
    <string name="login_keep_user">记住用户名</string>
    <string name="login_sure">登录</string>
    <string name="login_exit">退出</string>
    <string name="login_register">注册</string>
    <string name="login_tip_user">请输入用户名</string>
    <string name="login_tip_password">请输入密码</string>
    <string name="login_unknwon_Wrong">登录失败：未知错误</string>
    <string name="login_Wrong">用户名或则密码错误</string>
    <string name="login_null">用户名和密码不能为空</string>
    <string name="login_effect">用户名和密码只能有大小写字母和数字组成</string>
    <string name="login_exist">用户名已存在</string>
    <string name="login_loading_register">正在注册...</string>
    <string name="login_loading_login">正在登录...</string>
    <string name="login_register_success">注册成功</string>
    <string name="login_register_fail">注册失败</string>
    <string name="view_pop_favior_success">关注成功</string>
    <string name="view_pop_faviored">已添加关注</string>
    <string name="view_pop_faviored_cancel">已取消关注</string>
    <string name="view_pop_favior_fail">关注失败</string>
    <string name="view_pop_favior_fail_cancel_fail">取消关注失败</string>
    <string name="view_pop_favior">关注</string>
    <string name="view_pop_favior_cancel">取消关注</string>
    <string name="view_pop_share">分享</string>
    <string name="view_pop_remark">备注</string>
    <string name="view_pop_about">关于</string>
    <string name="view_pop_advice">建议</string>
    <string name="fragment_btn_search">搜索</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="to_wrap_activity">Wrap Activity</string>
    <string name="to_wrap_view">Wrap View</string>
    <string name="to_wrap_fragment">Wrap Fragment</string>
    <string name="to_load_success">加载成功（全局统一UI）</string>
    <string name="to_load_failed">加载失败（全局统一UI）</string>
    <string name="to_load_empty">空态（全局统一UI）</string>
    <string name="loading">加载中…</string>
    <string name="load_failed">加载失败，点击重试</string>
    <string name="load_failed_no_network">网络失联了…\n请联网后点击重试</string>
    <string name="empty">这里啥都没有!</string>
    <string name="str_none" />
    <string name="to_single_view">为单个View显示状态</string>
    <string name="to_scroll_view">为多个View显示状态</string>
    <string name="to_grid_view_load">在GridView中使用</string>
    <string name="to_recycler_view_load">在RecyclerView中使用</string>
    <string name="to_special">特殊的Loading UI</string>
    <string name="wrap_single_view">加载状态仅显示在某个View的区域</string>

    <string name="menu_weather">天气</string>
    <string name="menu_gallery">我的关注</string>
    <string name="menu_search">搜索</string>
    <string name="menu_about">关于</string>
    <string name="menu_share">分享</string>
    <string name="menu_send">建议</string>

    <dimen name="App_title">32sp</dimen>
    <dimen name="App_big">44sp</dimen>
    <dimen name="card_title">24sp</dimen>
    <dimen name="card_text">14sp</dimen>
    <dimen name="card_text_small">12sp</dimen>
    <dimen name="card_one">48dp</dimen>
    <dimen name="card_three">88dp</dimen>
    <dimen name="view_text">5sp</dimen>


    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="activity_vertical_margin">16dp</dimen>
    <dimen name="nav_header_vertical_spacing">8dp</dimen>
    <dimen name="nav_header_height">176dp</dimen>
    <dimen name="fab_margin">16dp</dimen>
    <dimen name="bar_height">200dp</dimen>
    <dimen name="margin">8dp</dimen>
    <dimen name="card_detailweather">160dp</dimen>
    <dimen name="card_detailweather_width">200dp</dimen>

</resources>
