<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/weather_fragment"
            android:icon="@drawable/ic_settings_one"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_mycare"
            android:icon="@drawable/ic_star_two"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_searh"
            android:icon="@drawable/ic_album_three"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_brightness_four"
            android:title="@string/menu_about" />
    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_favorite_five"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_school_six"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
