<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@mipmap/locatback">



  <androidx.cardview.widget.CardView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:cardCornerRadius="5dp"
      app:cardElevation="0dp"
      >

    <com.qmuiteam.qmui.widget.QMUIEmptyView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:background="@color/qmui_config_color_white"
        android:fitsSystemWindows="true"/>


      <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
          android:id="@+id/login_sure_button"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_below="@id/login_password_text"
          app:qmui_backgroundColor="@color/colorPrimary"
            android:layout_marginTop="43dp"
          android:textColor="@color/white"
          android:padding="10dp"
          android:text="@string/login_sure" />

      <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
          android:id="@+id/button_login_register"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          app:qmui_backgroundColor="@color/colorPrimary"
          android:layout_alignBottom="@id/login_sure_button"
          android:layout_marginStart="100dp"
          android:background="@color/colorPrimary"
          android:textColor="@color/white"
          android:layout_toEndOf="@id/login_sure_button"
          android:padding="10dp"
          android:text="@string/login_register" />

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/login_password_text"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_below="@id/login_user_text"
          android:layout_alignLeft="@id/login_user_text"
          android:layout_marginTop="25dp"
          android:hint="@string/login_tip_password"
          android:inputType="textPassword"
          android:padding="10dp"
          android:textAppearance="?android:attr/textAppearanceButton" />

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/login_user_text"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/imageView2"
          android:layout_marginTop="25dp"
          android:hint="@string/login_tip_user"
          android:padding="10dp"
          android:textAppearance="?android:attr/textAppearanceButton" />

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="20dp"
          android:src="@drawable/ic_login_24dp" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@id/login_user_text"
          android:layout_centerHorizontal="true"
          android:textSize="@dimen/card_text"
          android:textColor="@color/black"
          android:text="@string/app_name" />

      <CheckBox
          android:id="@+id/checkBox_keeppassword"
          android:layout_below="@+id/login_password_text"
          android:layout_above="@+id/button_login_register"
          android:layout_alignStart="@+id/button_login_register"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/login_keep_password" />

      <CheckBox
          android:id="@+id/checkBox_keepuser"
          android:layout_below="@+id/login_password_text"
          android:layout_above="@+id/button_login_register"
          android:layout_alignStart="@+id/login_sure_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/login_keep_user" />
    </com.qmuiteam.qmui.widget.QMUIEmptyView>
  </androidx.cardview.widget.CardView>

</LinearLayout>